Fork Me on GitHub Button
Took 24 minutes

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -250,8 +250,15 @@
                             menu-toggle>&nbsp; App Builder
                     </i>
                 </ion-item>
+                <ion-item
+                        ng-href="https://github.com/curedao/curedao-web-android-chrome-ios-demo-app"
+                          id="github">
+                    <i
+                            class="ion-social-github"
+                            menu-toggle>&nbsp; Fork Me on GitHub
+                    </i>
+                </ion-item>
             </ion-list>
-            <span ng-include="'templates/fragments/sensead-fragment.html'"></span>
         </ion-content>
     </ion-side-menu>
 </ion-side-menus>
