--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -255,7 +255,7 @@
                           id="github">
                     <i
                             class="ion-social-github"
-                            menu-toggle>&nbsp; Fork Me on GitHub
+                            menu-toggle>&nbsp; Fork Me
                     </i>
                 </ion-item>
             </ion-list>
