Help page, speech setting, futuristic background setting
Took 27 minutes

--- a/src/templates/intro-tour-new.html
+++ b/src/templates/intro-tour-new.html
@@ -2,20 +2,21 @@
     <ion-nav-title>Welcome</ion-nav-title>
     <canvas id="rainbow-canvas"
             style="position: absolute; z-index: 1; display: block; opacity: 0.5; pointer-events: none; background-color: transparent;"></canvas>
-    <div id="splash-screen" ng-if="appSettings.appDesign.intro.futuristicBackground !== false"
+    <div id="splash-screen" ng-if="appSettings.appDesign.intro.futuristicBackground === true"
          class="splash-wrapper" style="width: 100%; position: absolute; height: 100%;">
         <div class="splash-grid"></div>
     </div>
-    <div ng-show="!myIntro.ready && appSettings.appDesign.intro.futuristicBackground !== false"
+    <div ng-show="!myIntro.ready && appSettings.appDesign.intro.futuristicBackground === true"
          ng-include="'templates/splash-logo.html'" style="z-index: 3;">
     </div>
-    <div ng-if="state.speechEnabled === null" style="margin-top: 60%; bottom: 30%; color: white;
+    <div ng-if="state.speechEnabled === null" style="margin-top: 60%; bottom: 10%; color: white;
                                                     text-align: center; z-index: 3; position: absolute;
                                                     left: 0; right: 0;">
-        <h1 style="color: white;">May I speak to you?</h1>
+<!--        <h1 style="color: white;">May I speak to you?</h1>-->
         <div style="font-size: 60px;">
-            <md-button id="disableSpeechButton" ng-click="state.setSpeechEnabled(false)"> &nbsp; NO &nbsp;</md-button>
-            <md-button id="enableSpeechButton" ng-click="state.setSpeechEnabled(true)"> &nbsp; YES &nbsp;</md-button>
+<!--            <md-button id="disableSpeechButton" ng-click="state.setSpeechEnabled(false)"> &nbsp; NO &nbsp;</md-button>-->
+            <md-button id="enableSpeechButton" ng-click="state.setSpeechEnabled(true)"> &nbsp; Enable Speech
+                &nbsp;</md-button>
         </div>
     </div>
     <ion-slide-box on-slide-changed="myIntro.slideChanged(index)" style="z-index: 2;">
