--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -100,7 +100,7 @@
         <div id="splash-screen"
              class="splash-wrapper"
              style="width: 100%; position: absolute; height: 100%; z-index: 0;">
-            <a href="https://help.quantimo.do"
+            <a href="https://curedao.org/help"
                style="text-decoration: none; cursor:pointer;">
                 <div id="splash-logo">
                     <div id="splash-text"
