Cypress beforeEach request watchers
Took 52 minutes

--- a/src/templates/login-page.html
+++ b/src/templates/login-page.html
@@ -110,7 +110,7 @@
                                         <md-button type="submit" ng-click="state.emailLogin(true)" class="md-raised md-primary">
                                             Login
                                         </md-button>
-                                        <md-button href="https://api.curedao.org/api/v2/password/email" md-no-ink>Forgot Password</md-button>
+                                        <md-button href="https://app.quantimo.do/api/v2/password/email" md-no-ink>Forgot Password</md-button>
                                         <md-button ng-click="state.loginForm = false;"
                                                    md-no-ink>
                                             Sign Up
