--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -178,7 +178,7 @@
             <a class="item"> <i class="icon ion-ios-color-wand"></i> &nbsp; Downgrade to Lite </a>
         </div>-->
         <div id="image-credits" class="list card"
-             ng-click="openUrl('https://api.curedao.org/api/v2/image-credits')">
+             ng-click="openUrl('https://app.quantimo.do/api/v2/image-credits')">
             <a class="item"><i class="icon ion-ios-camera-outline"></i>&nbsp;Image Credits</a>
         </div>
 <!--        <div id="dialog-flow" class="list card">
