--- a/src/templates/items/data-source-item.html
+++ b/src/templates/items/data-source-item.html
@@ -6,35 +6,35 @@
         <img ng-src="{{connector.image}}"
              id="{{connector.name}}-image"
              alt="{{connector.displayName}} Connector Image"
-             style="width: 100%; max-height: 100px; max-width: 100px;">
+             style="width: 100%; max-height: 100px; max-width: 100px;" src="{{connector.image}}">
     </div>
     <div class="col col-70">
         <div class="row">
-            <h2 class="col col-90"
+            <div class="col col-90 md-headline"
                 id="{{connector.name}}-name"
                 style="white-space: normal; line-height: normal;">
                 {{connector.displayName}}
-            </h2>
+            </div>
             <div id="{{connector.name}}-action-sheet-button"
                  ng-click="showActionSheetForConnector(connector, $event)"
                  class="col col-10">
                 <i style="font-size: 20px;"
                    class="icon positive ion-more"></i>
             </div>
-            <button ng-if="connector.errorMessage"
+            <md-button ng-if="connector.errorMessage"
                     class="button icon ion-android-warning">
                 <md-tooltip md-direction="left">{{connector.errorMessage}}</md-tooltip>
-            </button>
+            </md-button>
         </div>
-        <p class="col col-90"
+        <div class="col col-90 md-subhead"
            id="{{connector.name}}-message"
            style="white-space: normal; line-height: normal;"
            ng-bind-html="connector.message">
-        </p>
+        </div>
     </div>
 </div>
 <div ng-if="connector.errorMessage" class="item item-avatar">
-    <img src="img/rating/face_rating_button_256_sad.png">
+    <img src="img/rating/face_rating_button_256_sad.png" alt="">
     <h2>IMPORT ISSUE</h2>
     <p ng-bind-html="connector.errorMessage"></p>
 
@@ -42,31 +42,31 @@
 <div class="buttons"
      style="text-align: center;"
      ng-if="connector.spreadsheetUploadLink">
-    <button ng-repeat="button in connector.buttons"
-            class="button button-balanced"
+    <md-button ng-repeat="button in connector.buttons"
+            class="md-raised md-primary"
             id="{{button.id}}"
             style="text-overflow: clip; margin: 5px;"
             ngf-select="uploadSpreadsheet($file, $invalidFiles, connector, button)">
-        <i class="{{button.ionIcon}}"> &nbsp; {{button.text}}</i></button>
+        <i class="{{button.ionIcon}}"> &nbsp; {{button.text}}</i></md-button>
 </div>
 <div class="buttons"
      style="text-align: center;"
      ng-if="!connector.spreadsheetUploadLink">
-    <button ng-repeat="button in connector.buttons"
+    <md-button ng-repeat="button in connector.buttons"
             id="{{button.id}}"
-            class="button button-balanced"
+            class="md-raised md-primary"
             style="text-overflow: clip; margin: 5px;"
             ng-click="connectorAction(connector, button, $event)">
         <i class="{{button.ionIcon}}"> &nbsp; {{button.text}}</i>
-    </button>
+    </md-button>
 </div>
 <div class="buttons"
      style="text-align: center;"
      ng-if="connector.loadingText">
-    <button class="button button-royal"
+    <md-button class="md-raised md-primary"
             id="{{connector.name}}-loading-button"
             style="text-overflow: clip; margin: 5px;"
             ng-click="">
         <i class="ion-ios-cloud-download"> &nbsp; {{connector.loadingText}}</i>
-    </button>
+    </md-button>
 </div>
