--- a/apps/ionic/src/templates/fragments/circle-page.html
+++ b/apps/ionic/src/templates/fragments/circle-page.html
@@ -5,7 +5,8 @@
             <div style="position: relative; display: block; padding-top: 20px;">
                 <div style="z-index: 8; ">
                     <img id="circle-page-image" ng-src="{{circlePage.image.url}}"
-                         style="width: 100px; height: 100px; margin: auto;">
+                         style="width: 100px; height: 100px; margin: auto;" alt="{{circlePage.title}}"
+                         src="{{circlePage.image.url}}">
                 </div>
             </div>
         </div>
