--- a/apps/ionic/src/templates/menu.html
+++ b/apps/ionic/src/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="true"
                 id="app-container">
-    <ion-side-menu-content ng-class="{'menu-disabled': hideNavigationMenu}" class="gradient-bg">
+    <ion-side-menu-content ng-class="{'menu-disabled': hideNavigationMenu}" class="css-cnggjx">
         <ion-nav-bar id="top-nav-bar"
                      class="{{appSettings.appDesign.ionNavBarClass}}"
                      ng-show="hideNavigationMenu === false || appSettings.designMode">
