--- a/apps/ionic/src/css/app.css
+++ b/apps/ionic/src/css/app.css
@@ -14,7 +14,7 @@
 @font-face {
   font-family: "Ionicons";
   src: url("https://static.quantimo.do/lib/ionic/fonts/ionicons.eot?v=2.0.1");
-  src: url("https://static.quantimo.do/lib/ionic/fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("https://static.quantimo.do/lib/ionic/fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("../fonts/ionicons.woff?v=2.0.1") format("woff"), url("https://static.quantimo.do/lib/ionic/fonts/ionicons.woff") format("woff"), url("https://static.quantimo.do/lib/ionic/fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg");
+  src: url("https://static.quantimo.do/lib/ionic/fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("../fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("../fonts/ionicons.woff?v=2.0.1") format("woff"), url("https://static.quantimo.do/lib/ionic/fonts/ionicons.woff") format("woff"), url("https://static.quantimo.do/lib/ionic/fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
